documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32NET.VB

    Public Declare Function AX1_MIBGetPortInfo Lib "AX1W32.DLL" Alias "_AX1_MIBGetPortInfo@12" (ByRef data As Byte, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_MIBGetVLInfo Lib "AX1W32.DLL" Alias "_AX1_MIBGetVLInfo@16" (ByVal mibtype As Short, ByRef data As Byte, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetConfig Lib "AX1W32.DLL" Alias "_AX1_NetConfig@20" (ByVal configval As Integer, ByVal macconst As Integer, ByVal speed As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetDefaultPortConfig Lib "AX1W32.DLL" Alias "_AX1_NetDefaultPortConfig@16" (ByVal ctrlflags As Integer, ByVal depth As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetDefaultPortGetHandle Lib "AX1W32.DLL" Alias "_AX1_NetDefaultPortGetHandle@12" (ByRef hport As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetGetVLCount Lib "AX1W32.DLL" Alias "_AX1_NetGetVLCount@12" (ByRef pvlcount As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetIFGConfig Lib "AX1W32.DLL" Alias "_AX1_NetIFGConfig@16" (ByVal configval As Integer, ByVal gapval As Short, ByVal busnum As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetRedundConfig Lib "AX1W32.DLL" Alias "_AX1_NetRedundConfig@12" (ByVal configval As Integer, ByVal pairid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetSetInterfaceID Lib "AX1W32.DLL" Alias "_AX1_NetSetInterfaceID@16" (ByVal flags As Short, ByVal idVal As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_Ntoh16 Lib "AX1W32.DLL" Alias "_AX1_Ntoh16@4" (ByVal val As Short) As Short
    Public Declare Function AX1_Ntoh32 Lib "AX1W32.DLL" Alias "_AX1_Ntoh32@4" (ByVal val As Integer) As Integer
    'Note: The following function uses a data type not supported in VB6.
    Public Declare Function AX1_Ntoh64 Lib "AX1W32.DLL" Alias "_AX1_Ntoh64@8" (ByVal val As Long) As Long
    Public Declare Function AX1_ParamFrameFreq Lib "AX1W32.DLL" Alias "_AX1_ParamFrameFreq@16" (ByVal configval As Integer, ByVal percent As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PktCalcCRCIP Lib "AX1W32.DLL" Alias "_AX1_PktCalcCRCIP@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktCalcCRCUDP Lib "AX1W32.DLL" Alias "_AX1_PktCalcCRCUDP@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetCtrlFlag Lib "AX1W32.DLL" Alias "_AX1_PktGetCtrlFlag@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetDstMac Lib "AX1W32.DLL" Alias "_AX1_PktGetDstMac@8" (ByRef pPkt As Byte, ByRef pAddress As ADDRESS) As Integer
    Public Declare Function AX1_PktGetFragID Lib "AX1W32.DLL" Alias "_AX1_PktGetFragID@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetFragOff Lib "AX1W32.DLL" Alias "_AX1_PktGetFragOff@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetIHL Lib "AX1W32.DLL" Alias "_AX1_PktGetIHL@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetInterfaceID Lib "AX1W32.DLL" Alias "_AX1_PktGetInterfaceID@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetIPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktGetIPChecksum@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetIPDest Lib "AX1W32.DLL" Alias "_AX1_PktGetIPDest@4" (ByRef pPkt As Byte) As Integer
    Public Declare Function AX1_PktGetIPLength Lib "AX1W32.DLL" Alias "_AX1_PktGetIPLength@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetIPSrc Lib "AX1W32.DLL" Alias "_AX1_PktGetIPSrc@4" (ByRef pPkt As Byte) As Integer
    Public Declare Function AX1_PktGetProtocol Lib "AX1W32.DLL" Alias "_AX1_PktGetProtocol@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetSeqNum Lib "AX1W32.DLL" Alias "_AX1_PktGetSeqNum@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetSrcMac Lib "AX1W32.DLL" Alias "_AX1_PktGetSrcMac@8" (ByRef pPkt As Byte, ByRef pAddress As ADDRESS) As Integer
    Public Declare Function AX1_PktGetTOS Lib "AX1W32.DLL" Alias "_AX1_PktGetTOS@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetTTL Lib "AX1W32.DLL" Alias "_AX1_PktGetTTL@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetType Lib "AX1W32.DLL" Alias "_AX1_PktGetType@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetUDPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPChecksum@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetUDPLength Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPLength@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetUDPPortDest Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPPortDest@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetUDPPortSrc Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPPortSrc@4" (ByRef pPkt As Byte) As Short
    Public Declare Function AX1_PktGetVersion Lib "AX1W32.DLL" Alias "_AX1_PktGetVersion@4" (ByRef pPkt As Byte) As Short
    Public Declare Sub AX1_PktPutCtrlFlag Lib "AX1W32.DLL" Alias "_AX1_PktPutCtrlFlag@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutDstMac Lib "AX1W32.DLL" Alias "_AX1_PktPutDstMac@12" (ByVal newMAC As ADDRESS, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutFragID Lib "AX1W32.DLL" Alias "_AX1_PktPutFragID@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutFragOff Lib "AX1W32.DLL" Alias "_AX1_PktPutFragOff@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutHeaderConstants Lib "AX1W32.DLL" Alias "_AX1_PktPutHeaderConstants@4" (ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutIHL Lib "AX1W32.DLL" Alias "_AX1_PktPutIHL@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutInterfaceID Lib "AX1W32.DLL" Alias "_AX1_PktPutInterfaceID@8" (ByVal busnum As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutIPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktPutIPChecksum@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutIPDest Lib "AX1W32.DLL" Alias "_AX1_PktPutIPDest@8" (ByVal newVal As Integer, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutIPLength Lib "AX1W32.DLL" Alias "_AX1_PktPutIPLength@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutIPSrc Lib "AX1W32.DLL" Alias "_AX1_PktPutIPSrc@8" (ByVal newVal As Integer, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutLenFromFrame Lib "AX1W32.DLL" Alias "_AX1_PktPutLenFromFrame@8" (ByVal frameSize As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutProtocol Lib "AX1W32.DLL" Alias "_AX1_PktPutProtocol@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutSeqNum Lib "AX1W32.DLL" Alias "_AX1_PktPutSeqNum@8" (ByVal newNum As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutSrcMac Lib "AX1W32.DLL" Alias "_AX1_PktPutSrcMac@12" (ByVal newMAC As ADDRESS, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutTOS Lib "AX1W32.DLL" Alias "_AX1_PktPutTOS@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutTTL Lib "AX1W32.DLL" Alias "_AX1_PktPutTTL@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutType Lib "AX1W32.DLL" Alias "_AX1_PktPutType@8" (ByVal newType As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutUDPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPChecksum@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutUDPLength Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPLength@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutUDPPortDest Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPPortDest@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutUDPPortSrc Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPPortSrc@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Sub AX1_PktPutVersion Lib "AX1W32.DLL" Alias "_AX1_PktPutVersion@8" (ByVal newVal As Short, ByRef pPkt As Byte)
    Public Declare Function AX1_PortConfig Lib "AX1W32.DLL" Alias "_AX1_PortConfig@28" (ByVal configval As Integer, ByVal dstid As Short, ByVal srcid As Short, ByVal depth As Short, ByRef portptr As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortDataRd Lib "AX1W32.DLL" Alias "_AX1_PortDataRd@28" (ByRef data As Byte, ByRef lengthptr As Short, ByRef rsnptr As Byte, ByRef timetaghptr As Integer, ByRef timetagptr As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortDataWr Lib "AX1W32.DLL" Alias "_AX1_PortDataWr@20" (ByVal rsn As Byte, ByRef data As Byte, ByVal length As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortGetHandle Lib "AX1W32.DLL" Alias "_AX1_PortGetHandle@16" (ByVal portnum As Short, ByRef hport As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortGetInfo Lib "AX1W32.DLL" Alias "_AX1_PortGetInfo@32" (ByRef configval As Integer, ByRef vlid As Short, ByRef dstport As Short, ByRef srcport As Short, ByRef depth As Short, ByRef reprate As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortGetNext Lib "AX1W32.DLL" Alias "_AX1_PortGetNext@20" (ByVal flag As Short, ByRef nextPort As Short, ByVal lastPort As Short, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortGetQueueCount Lib "AX1W32.DLL" Alias "_AX1_PortGetQueueCount@12" (ByRef queuecount As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortInfoRd Lib "AX1W32.DLL" Alias "_AX1_PortInfoRd@28" (ByRef timetaghptr As Integer, ByRef timetagptr As Integer, ByRef activityptr As Integer, ByRef errorptr As Integer, ByRef rsnptr As Byte, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortRawRd Lib "AX1W32.DLL" Alias "_AX1_PortRawRd@24" (ByRef packet As Byte, ByRef lengthptr As Short, ByRef timetaghptr As Integer, ByRef timetagptr As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortRawWr Lib "AX1W32.DLL" Alias "_AX1_PortRawWr@16" (ByRef packet As Byte, ByVal length As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortRd Lib "AX1W32.DLL" Alias "_AX1_PortRd@12" (ByRef pktdesc As AFDXPKTDESC, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortSkipConfig Lib "AX1W32.DLL" Alias "_AX1_PortSkipConfig@16" (ByVal ctrlflags As Integer, ByVal trigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortStepConfig Lib "AX1W32.DLL" Alias "_AX1_PortStepConfig@16" (ByVal ctrlflags As Integer, ByVal trigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RcvHostEnable Lib "AX1W32.DLL" Alias "_AX1_RcvHostEnable@8" (ByVal enableval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RobinSchedPort Lib "AX1W32.DLL" Alias "_AX1_RobinSchedPort@32" (ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByVal hport As Integer, ByRef hscheditem As Integer, ByVal hrobin As Integer, ByVal handleval As Integer) As Integer
